# MirrorLog

./: .gitignore  CMakeLists.txt  README.MD  README.md
mirlog/: CMakeLists.txt
mirlog/include/: MirrorLog.hpp
mirlog/src/: ConsoleLogger.cpp  ConsoleLogger.hpp  GlobalStaticLogging.cpp  GlobalStaticLogging.hpp  ILogger.hpp  LogType.hpp
tests/: CMakeLists.txt  ConsoleLoggerTests.cpp  GlobalStaticLoggingTests.cpp
